chore: add graph sources and headers for node

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,9 +24,11 @@ set(node
 # sources
 mesh/sources/node.c
 mesh/sources/common.c
+mesh/sources/graph.c
 mesh/sources/logger.c
 # headers
 mesh/headers/common.h
+mesh/headers/graph.h
 mesh/headers/stdafx.h
 mesh/headers/constants.h
 mesh/headers/packet.h
