feature: add zlib tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,13 +12,16 @@ mesh/sources/common.c
 mesh/sources/graph.c
 mesh/sources/packet.c
 mesh/sources/logger.c
+mesh/sources/user_interface.c
 # headers
 mesh/headers/common.h
 mesh/headers/graph.h
+mesh/headers/globals.h
 mesh/headers/stdafx.h
 mesh/headers/constants.h
 mesh/headers/packet.h
 mesh/headers/logger.h
+mesh/headers/user_interface.h
 )
 
 set(node 
@@ -35,7 +38,17 @@ mesh/headers/stdafx.h
 mesh/headers/constants.h
 mesh/headers/packet.h
 mesh/headers/logger.h
+)
 
+set(test_zlib
+# sources
+mesh/tests/test_zlib.c
+mesh/sources/packet.c
+mesh/sources/common.c
+# headers
+mesh/headers/common.h
+mesh/headers/packet.h
+mesh/headers/stdafx.h
 )
 
 # Location of header files
@@ -47,8 +60,13 @@ add_executable(app-server ${server})
 # Creates an executable file for the client
 add_executable(app-node ${node})
 
+# Creates an executable file for the compression and decompression packet
+add_executable(app-test-zlib ${test_zlib})
+
+
 find_package(ZLIB REQUIRED)
 
 # Linking libraries
 target_link_libraries(app-node ZLIB::ZLIB)
 target_link_libraries(app-server ZLIB::ZLIB)
+target_link_libraries(app-test-zlib ZLIB::ZLIB)
